[gd_scene load_steps=2 format=3 uid="uid://b3cfalxu0jjtr"]

[ext_resource type="Script" path="res://Scenes/UI/KeyBindingControl/KeyBindingControl.gd" id="1"]

[node name="KeyBindingControl" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
offset_right = 300.0
offset_bottom = 40.0
script = ExtResource("1")
keycode = 69

[node name="ActionLabel" type="Label" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Action :"

[node name="AssignedKeyLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "E"

[node name="EditButton" type="Button" parent="."]
layout_mode = 2
text = "edit"

[connection signal="pressed" from="EditButton" to="." method="_on_EditButton_pressed"]
